# keyauth-cpp-library

./: .gitignore  CMakeLists.txt
scripts/: build_options.cmake  cpr.cmake  http_request.cmake  json.cmake
src/: Security.hpp  auth.cpp  auth.hpp  common.hpp  utils.hpp
